added Latex class "projectreport"
Please use this Latex class for all of our documents. Feel free to edit
if needed.

--- a/report/algorithms/algorithms.tex
+++ b/report/algorithms/algorithms.tex
@@ -1,34 +1,14 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% EE227A - algorithms.tex
+% EE227A Project: algorithms.tex
 % Created by: Maximilian Balandat
 % Last edited: Apr 02 2012
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-
-\documentclass{article}
-
-% The following packages are standard
-\usepackage{amsmath}
-\usepackage{amssymb}
-% adjust the margins using the geometry package
-\usepackage[left=0.75in, right=0.75in, top=1in, bottom=0.75in]{geometry}
-% Begin paragraphs with an empty line rather than an indent
-\usepackage[parfill]{parskip}    
-\usepackage[noend,noline,ruled,nofillcomment]{algorithm2e} % support for typesetting altorighms
-\usepackage{amsthm}
-% add a bunch of theorem styles
-\newtheorem{proposition}{Proposition}
-\newtheorem{lemma}{Lemma}
-\newtheorem{theorem}{Theorem}
-\newtheorem{corollary}{Corollary}
-\theoremstyle{definition}
-\newtheorem{definition}{Definition}
-\newtheorem{example}{Example}[section]
-\theoremstyle{remark}
-\newtheorem{remark}{Remark}[section]
+% Use our own document class
+\documentclass{../../common/projectreport}
 
 % Input some of my LaTeX macros - Max
-\input{../common/defs.tex}
+\input{../../common/defs.tex}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
