added a few Latex macros

--- a/common/defs.tex
+++ b/common/defs.tex
@@ -51,6 +51,7 @@
 \newcommand{\One}{{\mathbf{1}}}
 
 \newcommand{\Ccal}{{\mathcal{C}}}
+\newcommand{\Dcal}{{\mathcal{D}}}
 \newcommand{\Fcal}{{\mathcal{F}}}
 \newcommand{\Hcal}{{\mathcal{H}}}
 \newcommand{\Lcal}{{\mathcal{L}}}
